--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: system-analysis-design
+    name: SystemAnalysisDesign
 
   datasource:
     url: jdbc:mysql://localhost:3306/SystemAD
@@ -10,10 +10,13 @@ spring:
 
   jpa:
     hibernate:
-      ddl-auto: none
+      ddl-auto: update
     properties:
       hibernate:
-        dialect: org.hibernate.dialect.MySQLDialect
+        show_sql: true
+        format_sql: true
+        default_batch_fetch_size: 100
+        dialect: org.hibernate.dialect.MySQL8Dialect
 
   logging.level:
     org.hibernate.SQL: debug
